--- a/stream-applications-release-train/stream-applications-docs/src/main/asciidoc/sinks.adoc
+++ b/stream-applications-release-train/stream-applications-docs/src/main/asciidoc/sinks.adoc
@@ -9,6 +9,9 @@ include::{stream-apps-root}/{branch}/applications/sink/cassandra-sink/README.ado
 [[spring-cloud-stream-modules-analytics-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/analytics-sink/README.adoc[tags=ref-doc]
 
+[[spring-cloud-stream-modules-elasticsearch-sink]]
+include::{stream-apps-root}/{branch}/applications/sink/elasticsearch-sink/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-file-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/file-sink/README.adoc[tags=ref-doc]
 
