--- a/applications/source/jdbc-source/README.adoc
+++ b/applications/source/jdbc-source/README.adoc
@@ -34,7 +34,7 @@ $$max-messages-per-poll$$:: $$Maximum messages per poll for the default poller.$
 
 $$data$$:: $$Data (DML) script resource references.$$ *($$List<String>$$, default: `$$<none>$$`)*
 $$driver-class-name$$:: $$Fully qualified name of the JDBC driver. Auto-detected based on the URL by default.$$ *($$String$$, default: `$$<none>$$`)*
-$$initialization-mode$$:: $$Initialize the datasource with available DDL and DML scripts.$$ *($$DataSourceInitializationMode$$, default: `$$embedded$$`, possible values: `ALWAYS`,`EMBEDDED`,`NEVER`)*
+$$initialization-mode$$:: $$Mode to apply when determining if DataSource initialization should be performed using the available DDL and DML scripts.$$ *($$DataSourceInitializationMode$$, default: `$$embedded$$`, possible values: `ALWAYS`,`EMBEDDED`,`NEVER`)*
 $$password$$:: $$Login password of the database.$$ *($$String$$, default: `$$<none>$$`)*
 $$schema$$:: $$Schema (DDL) script resource references.$$ *($$List<String>$$, default: `$$<none>$$`)*
 $$url$$:: $$JDBC URL of the database.$$ *($$String$$, default: `$$<none>$$`)*
