Add missing repoistory declarations. README cleanup.

--- a/applications/source/twitter-message-source/README.adoc
+++ b/applications/source/twitter-message-source/README.adoc
@@ -22,6 +22,7 @@ $$cron$$:: $$Cron expression value for the Cron Trigger.$$ *($$String$$, default
 $$fixed-delay$$:: $$Fixed delay for default poller.$$ *($$Long$$, default: `$$1000$$`)*
 $$initial-delay$$:: $$Initial delay for periodic triggers.$$ *($$Integer$$, default: `$$0$$`)*
 $$max-messages-per-poll$$:: $$Maximum messages per poll for the default poller.$$ *($$Long$$, default: `$$1$$`)*
+$$time-unit$$:: $$The TimeUnit to apply to delay values.$$ *($$TimeUnit$$, default: `$$<none>$$`, possible values: `NANOSECONDS`,`MICROSECONDS`,`MILLISECONDS`,`SECONDS`,`MINUTES`,`HOURS`,`DAYS`)*
 
 === twitter.connection
 
