--- a/README.adoc
+++ b/README.adoc
@@ -11,27 +11,31 @@ These applications can run standalone or as part of a data flow, such as the one
 
 === Project Structure
 
-The repository includes two sections - `Functions` and `Applications`.
-The former hosts the various Java functions, and the latter is for generating the standalone Spring Cloud Stream applications.
+The repository includes two major sections - `Functions` and `Applications`.
+The former hosts the various Java functions, and the latter is for generating the standalone Spring Cloud Stream applications and hosting their related components.
 
-The following are the four major components of this repository.
+The following are the various components of this repository.
 
 * https://github.com/spring-cloud/stream-applications/tree/master/functions[Standalone Java Functions]
-* https://github.com/spring-cloud/stream-applications/tree/master/applications/stream-applications-core[Common Core]
+* https://github.com/spring-cloud/stream-applications/tree/master/applications/stream-applications-core[Common Core Components for Applications]
 * https://github.com/spring-cloud/stream-applications/tree/master/applications[Spring Cloud Stream Applications]
-* https://github.com/spring-cloud/stream-applications/tree/master/applications/stream-applications-build[Docs / Tools]
+* https://github.com/spring-cloud/stream-applications/tree/master/stream-applications-build[Build Parent]
+* https://github.com/spring-cloud/stream-applications/tree/master/stream-applications-release-train[Release Train]
 
 === Reusable Functions
 
 |===
 | `java.util.Supplier` | `java.util.Function` | `java.util.Consumer`
 
+|link:functions/supplier/cdc-debezium-supplier/README.adoc[CDC Debezium]
+|link:functions/function/aggregator-function/README.adoc[Aggregator]
+|link:functions/consumer/analytics-consumer/README.adoc[Analytics]
 |link:functions/supplier/file-supplier/README.adoc[File]
 |link:functions/function/filter-function/README.adoc[Filter]
 |link:functions/consumer/cassandra-consumer/README.adoc[Cassandra]
 |link:functions/supplier/ftp-supplier/README.adoc[FTP]
 |link:functions/function/header-enricher-function/README.adoc[Header-Enricher]
-|link:functions/consumer/analytics-consumer/README.adoc[Analytics]
+|link:functions/consumer/elasticsearch-consumer/README.adoc[Elasticsearch]
 |link:functions/supplier/geode-supplier/README.adoc[Geode]
 |link:functions/function/http-request-function/README.adoc[HTTP Request]
 |link:functions/consumer/file-consumer/README.adoc[File]
@@ -44,55 +48,57 @@ The following are the four major components of this repository.
 |link:functions/supplier/jms-supplier/README.adoc[JMS]
 |link:functions/function/semantic-segmentation-function/README.adoc[Semantic Segmentation(Tensorflow)]
 |link:functions/consumer/jdbc-consumer/README.adoc[JDBC]
-|link:functions/supplier/mongodb-supplier/README.adoc[MongoDB]
+|link:functions/supplier/mail-supplier/README.adoc[Mail]
 |link:functions/function/spel-function/README.adoc[SpEL]
 |link:functions/consumer/log-consumer/README.adoc[Log]
-|link:functions/supplier/mqtt-supplier/README.adoc[MQTT]
+|link:functions/supplier/mongodb-supplier/README.adoc[MongoDB]
 |link:functions/function/splitter-function/README.adoc[Splitter]
 |link:functions/consumer/mongodb-consumer/README.adoc[MongoDB]
-|link:functions/supplier/rabbit-supplier/README.adoc[RabbitMQ]
+|link:functions/supplier/mqtt-supplier/README.adoc[MQTT]
 |link:functions/function/task-launch-request-function/README.adoc[Task Launch Request]
 |link:functions/consumer/mqtt-consumer/README.adoc[MQTT]
-|link:functions/supplier/s3-supplier/README.adoc[AWS S3]
+|link:functions/supplier/rabbit-supplier/README.adoc[RabbitMQ]
 |link:functions/function/tasklauncher-function/README.adoc[Task Launcher]
 |link:functions/consumer/rabbit-consumer/README.adoc[RabbitMQ]
-|link:functions/supplier/sftp-supplier/README.adoc[SFTP]
+|link:functions/supplier/s3-supplier/README.adoc[AWS S3]
 |link:functions/function/twitter-function/README.adoc[Twitter]
 |link:functions/consumer/redis-consumer/README.adoc[Redis]
-|link:functions/supplier/tcp-supplier/README.adoc[TCP]
-|link:functions/function/aggregator-function/README.adoc[aggregator]
-|link:functions/consumer/s3-consumer/README.adoc[AWS S3]
-|link:functions/supplier/time-supplier/README.adoc[Time]
-|
-|link:functions/consumer/sftp-consumer/README.adoc[SFTP]
-|link:functions/supplier/twitter-supplier/README.adoc[Twitter]
-|
-|link:functions/consumer/tcp-consumer/README.adoc[TCP]
-|link:functions/supplier/websocket-supplier/README.adoc[Websocket]
-|
-|link:functions/consumer/twitter-consumer/README.adoc[Twitter]
-|link:functions/supplier/cdc-debezium-supplier/README.adoc[CDC Debezium]
-|
-|link:functions/consumer/websocket-consumer/README.adoc[Websocket]
-|link:functions/supplier/mail-supplier/README.adoc[Mail]
-|
-|link:functions/consumer/wavefront-consumer/README.adoc[Wavefront]
-|link:functions/supplier/syslog-supplier/README.adoc[Syslog]
+|link:functions/supplier/sftp-supplier/README.adoc[SFTP]
 |
 |link:functions/consumer/rsocket-consumer/README.adoc[RSocket]
+|link:functions/supplier/syslog-supplier/README.adoc[Syslog]
+|
+|link:functions/consumer/s3-consumer/README.adoc[AWS S3]
+|link:functions/supplier/tcp-supplier/README.adoc[TCP]
+|
+|link:functions/consumer/sftp-consumer/README.adoc[SFTP]
+|link:functions/supplier/time-supplier/README.adoc[Time]
+|
+|link:functions/consumer/tcp-consumer/README.adoc[TCP]
+|link:functions/supplier/twitter-supplier/README.adoc[Twitter]
+|
+|link:functions/consumer/twitter-consumer/README.adoc[Twitter]
+|link:functions/supplier/websocket-supplier/README.adoc[Websocket]
+|
+|link:functions/consumer/websocket-consumer/README.adoc[Websocket]
+|
+|
+|link:functions/consumer/wavefront-consumer/README.adoc[Wavefront]
 |===
 
 === Reusable Spring Cloud Stream Applications
 
 |===
 | Source | Processor | Sink
-
+|link:applications/source/cdc-debezium-source/README.adoc[CDC Debezium]
+|link:applications/processor/aggregator-processor/README.adoc[Aggregator]
+|link:applications/sink/analytics-sink/README.adoc[Analytics]
 |link:applications/source/file-source/README.adoc[File]
 |link:applications/processor/bridge-processor/README.adoc[Bridge]
 |link:applications/sink/cassandra-sink/README.adoc[Cassandra]
 |link:applications/source/ftp-source/README.adoc[FTP]
 |link:applications/processor/filter-processor/README.adoc[Filter]
-|link:applications/sink/analytics-sink/README.adoc[Analytics]
+|link:applications/sink/elasticsearch-sink/README.adoc[Elasticsearch]
 |link:applications/source/geode-source/README.adoc[Geode]
 |link:applications/processor/groovy-processor/README.adoc[Groovy]
 |link:applications/sink/file-sink/README.adoc[Fiile]
@@ -108,12 +114,15 @@ The following are the four major components of this repository.
 |link:applications/source/load-generator-source/README.adoc[Load-Generator]
 |link:applications/processor/object-detection-processor/README.adoc[Object Detection(Tensorflow)]
 |link:applications/sink/log-sink/README.adoc[Log]
+|link:applications/source/mail-source/README.adoc[Mail]
+|
+|link:applications/sink/mongodb-sink/README.adoc[MongoDB]
 |link:applications/source/mongodb-source/README.adoc[MongoDB]
 |link:applications/processor/semantic-segmentation-processor/README.adoc[Semantic Segmentation(Tensorflow)]
-|link:applications/sink/mongodb-sink/README.adoc[MongoDB]
+|link:applications/sink/mqtt-sink/README.adoc[MQTT]
 |link:applications/source/mqtt-source/README.adoc[MQTT]
 |link:applications/processor/script-processor/README.adoc[Script]
-|link:applications/sink/mqtt-sink/README.adoc[MQTT]
+|link:applications/sink/pgcopy-sink/README.adoc[Pgcopy]
 |link:applications/source/rabbit-source/README.adoc[RabbitMQ]
 |link:applications/processor/splitter-processor/README.adoc[Splitter]
 |link:applications/sink/rabbit-sink/README.adoc[RabbitMQ]
@@ -123,8 +132,11 @@ The following are the four major components of this repository.
 |link:applications/source/sftp-source/README.adoc[SFTP]
 |link:applications/processor/twitter-trend-processor/README.adoc[Twitter Trend]
 |link:applications/sink/router-sink/README.adoc[Router]
+|link:applications/source/syslog-source/README.adoc[Syslog]
+|
+|link:applications/sink/rsocket-sink/README.adoc[RSocket]
 |link:applications/source/tcp-source/README.adoc[TCP]
-|link:applications/processor/aggregator-processor/README.adoc[Aggregator]
+|
 |link:applications/sink/sftp-sink/README.adoc[SFTP]
 |link:applications/source/time-source/README.adoc[Time]
 |
@@ -141,18 +153,12 @@ The following are the four major components of this repository.
 |link:applications/source/websocket-source/README.adoc[Websocket]
 |
 |link:applications/sink/twitter-update-sink/README.adoc[Twitter Update]
-|link:applications/source/cdc-debezium-source/README.adoc[CDC Debezium]
+|
 |
 |link:applications/sink/wavefront-sink/README.adoc[Wavefront]
-|link:applications/source/mail-source/README.adoc[Mail]
+|
 |
 |link:applications/sink/websocket-sink/README.adoc[Websocket]
-|link:applications/source/syslog-source/README.adoc[Syslog]
-|
-|link:applications/sink/pgcopy-sink/README.adoc[Pgcopy]
-|
-|
-|link:applications/sink/rsocket-sink/README.adoc[RSocket]
 |===
 
 === Build
